--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,17 @@
     </dependencies>
 
    <build>
+
+
+       <resources>
+       <resource>
+           <directory>src/resources</directory>
+           <includes>
+               <include>config.properties</include>
+           </includes>
+       </resource>
+       </resources>
+
         <plugins>
 <plugin>
     <groupId>org.apache.maven.plugins</groupId>
@@ -47,5 +58,7 @@
 </plugin>
 </plugins>
 </build>
+
+
 
 </project>
